--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Portfolio Kyla/ About Kyla</title>
+        <title>Portfolio Kyla/ Acceuil</title>
         <link rel="icon" href="Alloo/Rose de Kyla .png">
         <link rel="stylesheet" href="Accueil.css">
         <link href="Font/Hardpixel.OTF">
@@ -12,28 +12,14 @@
         <div id="warp">
             <nav id="nav">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Accueil.html">Home</a></li>
                     <li><a href="Projet.html">Projet</a></li>
                     <li><a href="Moi.html">About</a></li>
                     <li><a href="Contact.html">Contact</a></li>
                 </ul>
             </nav>
-
-            <div id="Descri"></div>
-
-            <div id="sousbout">
-                <a id="LienCV" href="Alloo/Curriculum Vitae.pdf" target="_blank" onmouseover="HoverIcon('CV','CVSouri')" onmouseout="PasHover('CV','CVSouri')">
-                    <img src="Alloo/Cv2.png" id="CV" style="opacity: 1;">
-                    <img src="Alloo/Cv1.png" id="CVSouri" style="opacity: 0;">                
-                </a>
-                <a id="LienConct" href="Contact.html" onmouseover="HoverIcon('Cont','ContSouri')" onmouseout="PasHover('Cont','ContSouri')">
-                    <img src="Alloo/Contact2.png" id="Cont" style="opacity: 1;" >
-                    <img src="Alloo/Contact.png" id="ContSouri" style="opacity: 0;">
-                </a>
-            </div>
+            <div id="Text"></div>
         </div>
-
-
         <div id="margin"></div>
         <div id="footer">
             <div id="Musique">
