--- a/Projet.html
+++ b/Projet.html
@@ -12,7 +12,7 @@
         <div id="warp">
             <nav id="nav">
                 <ul>
-                    <li><a href="Accueil.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Projet.html">Projet</a></li>
                     <li><a href="Moi.html">About</a></li>
                     <li><a href="Contact.html">Contact</a></li>
