--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="warp">
             <nav id="nav">
                 <ul>
-                    <li><a href="Accueil.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Projet.html">Projet</a></li>
                     <li><a href="Moi.html">About</a></li>
                     <li><a href="Contact.html">Contact</a></li>
@@ -25,7 +25,7 @@
             <div id="Musique">
                 <p>Musique de font : </p>
                 <font color="#a73354" style="font-size: 95%; margin-left:0%;">Bonebottom-<a id="credSkil" href="https://www.hollowknightsilksong.com/" target="_blank"><font style="font-size: 100%;" >Skilsong</font></a> OST : </font>
-                <audio controls autoplay id="Skilsong"> 
+                <audio controls id="Skilsong"> 
                     <source src="Musique/Bonebottom (Silksong OST Sample).mp3" type="audio/mp3">
                 </audio>
                 <font color="#c0c5c9" style="font-size: 85%; margin-left: 0%;">Pale Court-<a id="credHollow" href="https://www.hollowknight.com/" target="_blank"><font style="font-size: 100%;" >Hollow Knight</font></a> OST : </font>
@@ -33,11 +33,11 @@
                     <source src="Musique/08 Pale Court (Hollow Knight Gods & Nightmares).mp3" type="audio/mp3">
                 </audio>
                 <font color="#e6d2e6" style="margin-left:0%;">Snow Forest-<a id="credOmorisn" href="https://www.omori-game.com/en" target="_blank"><font style="font-size: 100%;" >Omori</font></a> OSt: </font>
-                <audio controls autoplay id="Snow"> 
+                <audio controls id="Snow"> 
                     <source src="Musique/Snow Forest - A Single Flower Blooms  Omori [30 Minutes Extended].mp3" type="audio/mp3">
                 </audio>
                 <font color="#54378f">Stardust Diving-<a id="credOmorist" href="https://www.omori-game.com/en" target="_blank"><font style="font-size: 100%;" >Omori</font></a>  OST : </font>
-                <audio controls autoplay id="Stardust"> 
+                <audio controls id="Stardust"> 
                     <source src="Musique/Stardust Diving  Omori [30 Minutes Extended].mp3" type="audio/mp3">
                 </audio>
             </div>
