--- a/Proj/Fate.html
+++ b/Proj/Fate.html
@@ -15,57 +15,59 @@
             </div>
             <div id="Margin" style="height: 18.65%;"></div>
 
-            <p style="margin-left: 23%; margin-top: 1%;">Programme codee en Python avec une base de donné sur Pycharm</p>
+            <p style="margin-left: 23%; margin-top: 1%;">Programme code en Python avec une base de données sur Pycharm</p>
             <h1 style="margin-left:2%; margin-top: 12.5%;"><font color="#7d5297">Fate, Source Du Destin</font></h1>
-            <p style="margin-left: 2%; margin-top: 18%;">Fate est un Journal intime qui conserve toute les <br>
-                données qui sont écrite, en tant que journal intime <br>
-                il va de sois que il y a système de sécurité comprenant <br>
-                un mot de passe crypté stocké dans un txt ainsi que un nombre <br>
-                de chance et une fermeture de sécurité, avant la fermeture de <br>
-                se programme, il est possible de laissé un message que <br> 
-                l'utilisateur peut allez lire. <br>
-                Au premier Lancement de Fate, ce dernier crée tout ses dossier lui même, <br>
-                rendant le programme complétement portable et explique le fonctionnement. <br>
-                aussi a chaque lancement de Fate, il s'assure que il ne manque <br>
-                aucun dossier ni fichier, et recrée si problème mais demande les raison <br>
-                aussi a l'utilisateur, il se doit aussi de crée un fichier tout les début de moi, <br>
-                ce qu'il fait très bien en suivant le calendrier.
+            <p style="margin-left: 2%; margin-top: 18%;">Fate est un Journal intime qui conserve toutes les <br>
+                donnees qui sont ecrites, en tant que journal intime <br>
+                il va de soit qu'il y a un systeme de securite comprenant <br>
+                un mot de passe crypte stocke dans un texte ainsi qu'un <br>
+                nombre de chance et une fermeture de securite, avant la fermeture <br>
+                de ce programme, il est possible de laisser un message que <br> 
+                l'utilisateur peut aller lire. <br>
+                Au premier Lancement de Fate, ce dernier cree tous ses <br>
+                dossiers lui meme, rendant le programme completement <br>
+                portable et explique le fonctionnement. <br>
+                aussi a chaque lancement de Fate, il s'assure qu'il ne manque <br>
+                aucun dossiers ni fichiers, et recree si il y a un probleme <br>
+                mais demande les raisons aussi a l'utilisateur, il se doit <br>
+                aussi de creer un fichier tous les debuts de mois, <br>
+                ce qu'il fait tres bien en suivant le calendrier.
             </p>
             <img src="Fate/FateLancement.png" style="margin-top: 14%; width: 33%; float: right; margin-right: 1%;">
             <img src="Fate/FateMDP.png" style="margin-top: 1%; width: 33%; float: right; margin-right: 1%; ">
             <img src="Fate/FateMois.png" style="margin-top: 1%; width: 33.5%; float: right; margin-right: 1%;">
 
-            <h1 style="margin-left: 2%; margin-top: 46.5% "><font color="#7d5297">Scellé Dans L'Encre !</font></h1>
-            <p style="margin-left: 2%; margin-top: 21.5%;">Lors du Lancement de Fate, il demandera comment ce  <br>
-                passe la journée du propriétaire entre 5choix de réponse, <br>
-                a la suite de cet réponse, le comportements du programme changera, <br>
-                cet information serra enregistré dans le journal, et il demandera <br>
-                si il veut écrire dans ou le journal ou l'agenda, si jamais il <br>
-                refuse il serra toujours possible pour lui de remplir le jour <br>
-                dans le menu, aussi le programme permet au propriétaire de remplir <br>
-                les 15 dernier jours si jamais il y en a parmi eux qui ne sont <br>
-                pas remplit.
+            <h1 style="margin-left: 2%; margin-top: 47.5% "><font color="#7d5297">Scellé Dans L'Encre !</font></h1>
+            <p style="margin-left: 2%; margin-top: 19.5%;">Lors du Lancement de Fate, il demandera comment se  <br>
+                passe la journee du proprietaire entre 5 choix de reponses, <br>
+                a la suite de cet reponse, le comportement du programme changera, <br>
+                cette information sera enregistree dans le journal, et il demandera <br>
+                s'il veut ecrire soit dans le journal ou l'agenda, si jamais il <br>
+                refuse il sera toujours possible pour lui de remplir le jour <br>
+                dans le menu, aussi le programme permet au proprietaire de remplir <br>
+                les 15 derniers jours si jamais il y en a parmi eux qui ne sont <br>
+                pas remplis.
             </p>
             <img src="Fate/FateAvant.png" style="float: right; margin-top: 15%; width: 35%; margin-right: 1%;">
-            <img src="Fate/FateSentImentLanc.png" style="float: right; margin-top: 0%; width: 43%; margin-right: 1%;">
+            <img src="Fate/FateSentImentLanc.png" style="float: right; margin-top: 1%; width: 43%; margin-right: -35%;">
 
             <h1 style="margin-left: 2%; margin-top: 83.5%;"><font color="#7d5297">Robotique Sentimental</font></h1>
-            <p style="margin-left: 2%; margin-top: 24.5%;">Une fois que vous avez écrit tout ce que vous <br>
-                vouliez dire tout ce que vous souhaitiez dire, <br>
-                il est possible de tout relire des archives, <br>
-                le programmes stock tout il est donc même possible <br>
-                de lire des choses de il y a longtemps. aussi la sélection <br>
-                des jour est représenté dans un grand tableau ou tout les <br>
-                jours d'un mois se représenté et avec un code couleur en fonction <br>
-                de l'émotion correspondante au jour <br>
-                (comment c'est passé la journée en grand therme)
+            <p style="margin-left: 2%; margin-top: 23%;">Une fois que vous avez ecrit tout ce que vous <br>
+                vouliez dire, <br>
+                il est possible de tout relire dans les archives, <br>
+                le programme stock tout. Il est donc même possible <br>
+                de lire des choses d'il y a longtemps. aussi la selection <br>
+                des jours est representee dans un grand tableau ou tous les <br>
+                jours d'un mois se representent avec un code couleur en fonction <br>
+                de l'emotion correspondante au jour <br>
+                (comment c'est passe la journee en grand therme)
             </p>
             <img src="Fate/FateLireAvant.png" style="float: right; margin-top: 15%; width: 21%; margin-right: 9%;" >
             <img src="Fate/FateCalendrier.png" style="float: right; margin-top: 1%; width: 41%; margin-right: 1%;">
 
             <h1 style="float:left; margin-top: 116%; margin-left: 29%;"> <font color="#7d5297">Conclusion</font></h1>
-            <p style="margin-left: 2%; margin-right: 2%; margin-top: 17.5%;">Le nom de "Fate" viens de la bague que porte un personnage important de mon univers (celui en font sur l'accueil du portfolio) et ce programme me tien a cœur et j'ai éprouvé beaucoup de motivation a le faire.
-                Ce programme a été un programme très enrichissant a faire, c'est une idée de projet que j'ai eus en début Décembre 2021 et c'est un projet que j'ai fait en complète autonomie, il ma fait réalisé pas mal de choses sur le fait de programmé en autonomie. j'ai aussi appris a comment gérée des donnée dans plusieurs fichier, crypté et a faire un programme qui se répare ainsi que a le faire utilisé la notion de temps. </p>
+            <p style="margin-left: 2%; margin-right: 2%; margin-top: 15.5%;">Le nom de "Fate" vient de la bague que porte un personnage important de mon univers (celui en font sur l'accueil du portfolio) et ce programme me tient a coeur et j'ai eprouve beaucoup de motivation a le faire.
+                Ce programme a ete un programme tres enrichissant a faire, c'est une idee de projet que j'ai eu en debut Decembre 2021 et c'est un projet que j'ai fait en complete autonomie, il m'a fait realiser pas mal de choses sur le fait de programmer en autonomie. j'ai aussi appris a comment gerer des donnees dans plusieurs fichiers, crypter et a faire un programme qui se repare ainsi qu'a le faire utiliser la notion de temps. </p>
 
             <a href="Lab.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
                 <img src="suite/Gauche/Lab.png" id="Pixel" style="opacity: 1; margin-top: 131.5%; margin-left: -51.5%;"> 
