--- a/Proj/Jarre.html
+++ b/Proj/Jarre.html
@@ -15,36 +15,36 @@
             </div>
             <div id="Margin" style="height: 22.15%;"></div>
 
-            <p style="margin-left: 22.5%; margin-top: 2%;">Programme codee en C# en fonctionnel sur Visual Studio Code</p>
+            <p style="margin-left: 22.5%; margin-top: 2%;">Programme code en C# en fonctionnel sur Visual Studio Code</p>
 
             <h1 style="margin-left:2%; margin-top: 13%;"><font color="#155715">De l'Or A l'Ecailles ! </font></h1>
             <p style="margin-left: 2%; margin-top: 17.5%;">Dans ce jeu de jarre il est possible de jouer a plusieurs <br> 
-                niveau allant du plus dur au plus complique dont les <br>
-                probabilite de remporte une manche est donne dans les regles
+                niveaux allant du plus dur au plus complique dont les <br>
+                probabilites de remporter une manche.
                 </p>
             <img src="Jarre/JarreRegle.png" style="margin-top: 9.5%; width: 45%; float: right; ">
 
             <h1 style="margin-left: 2%; margin-top: 35% "><font color="#155715">Quel Jarre ?</font></h1>
-            <p style="margin-left: 2%; margin-top: 24.5%;">Dans une salle, il y a 5 Jarres, la quel ouvrir ? <br>
-                le joueur a disposition un certain nombre de jarres et <br>
-                doit designe la quel il veut ouvrir en tapant un chiffre <br>
-                entre 1 et le nombre total de jarres, il au un compteur de <br>
-                clés toujours avec lui, si celui tombe a 0 alors il repart <br>
-                sans rien, a l'inverse a 3cle, il gagne (pour les 3 premier <br> mode)
+            <p style="margin-left: 2%; margin-top: 24.5%;">Dans une salle, il y a 5 Jarres, laquelle ouvrir ? <br>
+                le joueur a a disposition un certain nombre de jarres et <br>
+                doit designer laquelle il veut ouvrir en tapant un chiffre <br>
+                entre 1 et le nombre total de jarres, il a un compteur de <br>
+                clés toujours avec lui, si celui ci tombe a 0 alors il repart <br>
+                sans rien, a l'inverse a 3 cles, il gagne (pour les 3 premiers <br> modes)
             </p>
             <img src="Jarre/JarreP1GG.png" style="float: right; margin-top: 15%; width: 45%;">
 
             <h1 style="margin-left: 2%; margin-top: 65%;"><font color="#155715">Toujours dans l'Exces !</font></h1>
             <p style="margin-left: 2%; margin-top: 28.5%;">Dans ce jeu de Jarre, il existe un dernier mode, c'est un <br>
-                mode personnalise dans le quel il est possible de choisir <br>
-                tout ses parametre (nombre de Jarre, de serpend par Jarre <br>
-                et de Cles pour gagne)
+                mode personnalise dans lequel il est possible de choisir <br>
+                tous ses parametres (nombre de Jarre, de serpend par Jarre <br>
+                et de Cles pour gagner)
             </p>
             <img src="Jarre/JarrePerso.png" style="float:right; margin-top: 26%; width: 42.5%; ">
 
 
             <h1 style="float:left; margin-top: 85%; margin-left: 29%;"> <font color="#155715">Conclusion</font></h1>
-            <p style="margin-left: 2%; margin-right: 2%; margin-top: 19%;">Ce jeu de jarre fait a ete un grand avancement pour moi, je l'ai commence en Novembre 2021, apres avoir commence une formation en Autodidactes en C#, apres avoir appris les base, j'ai decide de faire une pause et de faire un programme sans aide pour assimile les base du C#, j'ai aussi du me servir de la documentation disponible pour utilise de nouvelle choses, un programme tres enrichissant pour moi. Autrement, c'était un programme que j'avais deja fait en Python en Terminal, j'ai donc appris aussi beaucoup de mes erreurs sur ma facon de code.</p>
+            <p style="margin-left: 2%; margin-right: 2%; margin-top: 19%;">Ce jeu de jarre a ete un grand avancement pour moi, je l'ai commence en Novembre 2021, apres avoir commence une formation en Autodidactes en C#, apres avoir appris les bases, j'ai decide de faire une pause et de faire un programme sans aide pour assimiler les bases du C#, j'ai aussi du me servir de la documentation disponible pour utiliser de nouvelles choses, un programme tres enrichissant pour moi. Autrement, c'etait un programme que j'avais deja fait en Python en Terminal, j'ai donc appris aussi beaucoup de mes erreurs sur ma facon de coder.</p>
 
             <a href="Bot.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
                 <img src="suite/Gauche/Botapr.png" id="Pixel" style="opacity: 1; margin-top: 102.5%; margin-left: -49%;"> 
