--- a/Proj/Bot.html
+++ b/Proj/Bot.html
@@ -15,27 +15,27 @@
             </div>
             <div id="Margin"></div>
 
-            <p style="margin-left: 22.5%; margin-top: 2%;">Programme codee en Python avec l'API discord.py sur Pycharm</p>
+            <p style="margin-left: 22.5%; margin-top: 2%;">Programme code en Python avec l'API discord.py sur Pycharm</p>
 
-            <h1 style="margin-left:2%; margin-top: 12.5%;"><font color="#5e0808">Petit Match de Ping-Pong</font></h1>
-            <p style="margin-left: 2%; margin-top: 17.5%;">Le bot discord est en capacite de lire tout les message <br> dans le server
+            <h1 style="margin-left:2%; margin-top: 13%;"><font color="#5e0808">Petit Match de Ping-Pong</font></h1>
+            <p style="margin-left: 2%; margin-top: 17.5%;">Le bot discord est en capacite de lire tous les messages <br> dans le serveur
                 a la suite, il est possible de le faire reagir <br> a certaine phrase 
                 en exemple ici, a chaque message contenant <br> le mot "ping" il repondra "pong"
                 il peut facilement etre un <br> bot de moderation 
                 </p>
             <img src="Bot/BotPing.png" style="margin-top: 7%; width: 42%; float: right; ">
 
-            <h1 style="margin-left: 2%; margin-top: 39.5% "><font color="#5e0808">A Votre Service !</font></h1>
-            <p style="margin-left: 2%; margin-top: 22%;">Il est possible de demande a un bot discord d'effectuer des <br> action.
+            <h1 style="margin-left: 2%; margin-top: 36% "><font color="#5e0808">A Votre Service !</font></h1>
+            <p style="margin-left: 2%; margin-top: 22%;">Il est possible de demander a un bot discord d'effectuer des <br> actions.
                 Pour cela il faut ecrire le prefixe du bot (ici "Kyla.") <br>
-                et l'action demande Il est donc possible de faire de nombreuse <br>
-                chose, comme demande les regle d'un serveur ou des instruction <br>
-                plus precise sur le theme du server. On peut aussi reserve les <br>
-                commandes a certaine personne en fonction de leur roles, il est <br>
+                et l'action demandee Il est donc possible de faire de nombreuses <br>
+                choses, comme demande les regles d'un serveur ou des instructions <br>
+                plus precise sur le theme du serveur. On peut aussi reserver les <br>
+                commandes a certaines personnes en fonction de leur roles, il est <br>
                 donc possible de faire un systeme d'avertissement, pas disponible <br>
-                sans bot, en utilisant une commandes qui donnera un avertissement <br>
-                quand on donne sont identifiant, alors l'identifiant serra stocke <br>
-                avec sont nombre d'avertissement dans un dictionnaires et renvoyer <br>
+                sans bot, en utilisant une commande qui donnera un avertissement <br>
+                quand on donne son identifiant, alors l'identifiant sera stocke <br>
+                avec son nombre d'avertissement dans un dictionnaire et renvoyer <br>
                 au bout du 3eme. 
             </p>
             <img src="Bot/BotMagie.png" style="float: right; margin-top: 5%; height: 12%;">
@@ -43,13 +43,13 @@
             <img src="Bot/BotBan.png" style="float: right; margin-left: 45%; margin-top: 2%; width: 42%;">
 
             <h1 style="margin-left: 2%; margin-top: 87.5%;"><font color="#5e0808">Recevez ma Bénédiction</font></h1>
-            <p style="margin-left: 2%; margin-top: 28.5%;">Il est aussi possible de faire en sorte que un bot discord <br>
-                attribue des role au utilisateur comme tout moderateur, pour <br>
-                optimise cela, il est possible que un bot lise tout les reactions <br>
-                mise sur un message en particulier et d'ajoute un role en <br>
-                fonction de la reaction ajoute et si enleve alors d'enleve le role <br>
-                a la suite de quoi, on peut aussi avertir l'utilisateur en lui <br> 
-                envoyant un message prive avec le bot.
+            <p style="margin-left: 2%; margin-top: 28.5%;">Il est aussi possible de faire en sorte qu'un bot discord <br>
+                attribue des roles au utilisateur comme tout moderateur, <br>
+                pour optimiser cela, il est possible qu'un bot lise toutes <br>
+                les reactions mises sur un message en particulier et d'ajouter <br>
+                un role en fonction de la reaction ajoutee et si enlever alors <br>
+                d'enlever le role a la suite de quoi, on peut aussi avertir <br>
+                l'utilisateur en lui envoyant un message prive avec le bot.
             </p>
             <img src="Bot/BotMagieOri.png" style="float:right; margin-top: 12%; width: 44%; ">
             <img src="Bot/BotNotif.png" style="float: right; margin-right: -44%; margin-top: 37%;">
@@ -57,8 +57,8 @@
             <img src="Bot/BotGalaxi.png" style="float: right; margin-right: -14%; margin-top: 38%; height: 2.5%;">
             <img src="Bot/BotBeni.png" style="float: right; margin-top: 46%; margin-right: -40%; width: 35%;">
 
-            <h1 style="float:left; margin-top: 120%; margin-left: 29%;"> <font color="#5e0808">Conclusion</font></h1>
-            <p style="margin-left: 2%; margin-right: 2%; margin-top: 31%;">C'est un programme que j'ai crée a la fin des grandes vacances de 2021, c'est un programme que j'ai eus envie de faire pour un server personnalisé. pour la réalisation de ce programme, j'ai du apprendre a utilisé une API (discord.py) et suivre la documentation en ligne pas part pas, cela fut très enrichissant et utile.</p>
+            <h1 style="float:left; margin-top: 115%; margin-left: 29%;"> <font color="#5e0808">Conclusion</font></h1>
+            <p style="margin-left: 2%; margin-right: 2%; margin-top: 26%;">C'est un programme que j'ai cree a la fin des grandes vacances de 2021, c'est un programme que j'ai eu envie de faire pour un serveur personnalise. pour la realisation de ce programme, j'ai du apprendre a utiliser une API (discord.py) et suivre la documentation en ligne pas a pas, cela fut tres enrichissant et utile.</p>
 
             <a href="Pixel.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
                 <img src="suite/Gauche/Art.png" id="Pixel" style="opacity: 1; margin-top: 131.5%; margin-left: -49%;"> 
