--- a/Proj/Lab.html
+++ b/Proj/Lab.html
@@ -15,28 +15,28 @@
             </div>
             <div id="Margin" style="height: 25.15%;"></div>
 
-            <p style="margin-left: 18.5%; margin-top: 2%;">Programme codee en Python en Poo avec la Librairie Matplotlib sur Pycharm</p>
+            <p style="margin-left: 18.5%; margin-top: 2%;">Programme code en Python en Poo avec la Librairie Matplotlib sur Pycharm</p>
 
             <h1 style="margin-left:2%; margin-top: 13%;"><font color="#a0991a">Le Labyrinthe Empile</font></h1>
-            <p style="margin-left: 2%; margin-top: 17.5%;">Le generateur de Labyrinthe, genere des labyrinthe <br> 
-                aleatoirement avec le nombre un nombre de case x <br>
-                et un nombre y, il range tout les murs dans une pile <br> 
-                qu'il melange a fin de cree un labyrinthe aleatoire avec <br>
+            <p style="margin-left: 2%; margin-top: 17.5%;">Le generateur de Labyrinthe, genere des labyrinthes <br> 
+                aleatoirement avec un nombre de case x <br>
+                et un nombre y, il range tous les murs dans une pile <br> 
+                qu'il melange afin de cree un labyrinthe aleatoire avec <br>
                 un systeme de fusion des chemins.
             </p>
             <img src="Lab/LeLab2.png" style="margin-top: 9.5%; width: 24%; margin-right: 1%; float:right">
             <img src="Lab/LeLab1.png" style="margin-top: 9.5%; margin-right: 1%; width: 24%; float: right; ">
 
             <h1 style="margin-left: 2%; margin-top: 38% "><font color="#a0991a">Du Debut A La Fin !</font></h1>
-            <p style="margin-left: -46.25%; margin-top: 26%;">Les Labyrinthe cree dans ce programme sont cree <br> 
+            <p style="margin-left: -46.25%; margin-top: 26%;">Les Labyrinthes crees dans ce programme sont crees <br> 
                  en POO et donc possede leur systeme de zone propre, <br>
-                 permettant au Labyrinthe d'etre sur de possede une entre <br>
-                 et une sortie et donc le bon fonctionnement du programmes
+                 permettant au Labyrinthe d'etre sur de posseder une entree <br>
+                 et une sortie et donc le bon fonctionnement du programme
             </p>
             <img src="Lab/LabCod.png" style="float: right; margin-top: 15%; margin-right: 1%; width: 45%;">
 
             <h1 style="float:left; margin-top: 63%; margin-left: 29%;"> <font color="#a0991a">Conclusion</font></h1>
-            <p style="margin-left: 2%; margin-right: 2%; margin-top: 19%;">Ce projet a ete un des projets qui ma rendu bien serieux dans mon codage et a ete tres enrichissant. il a ete un projet qui a fait suite au cours sur la POO et reutilisais ces capacite mais au aussi ete un projet en complete autonomie, après la rencontre de quelque probleme organisation et un changement de facon de travailler nettement meilleurs, j'en ai tire beaucoup de lecon.</p>
+            <p style="margin-left: 2%; margin-right: 2%; margin-top: 19%;">Ce projet a ete un des projets qui m'a rendu bien serieux dans mon codage et a ete tres enrichissant. il a ete un projet qui a fait suite au cours sur la POO et reutilisait ces capacites mais aussi etait un projet en complete autonomie, apres la rencontre de quelques problemes d'organisation et un changement de facon a travailler nettement mieux, j'en ai tire beaucoup de lecons.</p>
 
             <a href="Jarre.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
                 <img src="suite/Gauche/Jarre.png" id="Pixel" style="opacity: 1; margin-top: 78.5%; margin-left: -53.5%;"> 
