--- a/Proj/Morpion.html
+++ b/Proj/Morpion.html
@@ -15,30 +15,31 @@
             </div>
             <div id="Margin" style="height: 25.15%;"></div>
 
-            <p style="margin-left: 18.5%; margin-top: 2%;">Programme codee en Python en Poo avec la Librairie Pygame sur Pycharm</p>
+            <p style="margin-left: 18.5%; margin-top: 2%;">Programme code en Python en Poo avec la Librairie Pygame sur Pycharm</p>
 
-            <h1 style="margin-left:2%; margin-top: 13%;"><font color="#142450">Un Croix Et Un Cercle</font></h1>
+            <h1 style="margin-left:2%; margin-top: 13%;"><font color="#142450">Une Croix Et Un Cercle</font></h1>
             <p style="margin-left: 2%; margin-top: 17.5%;">Ce Projet est un Morpion (Tic Tac Toe) est un <br>
                 projet fait en POO, ce qui a rendu le Programme <br>
                 personnalisable (symbole et grille), il a aussi <br>
                 une interface graphique en Pycharm, ce qui permet <br>
-                de jouer avec d'autre personne. 
+                de jouer avec d'autres personnes. 
             </p>
             <img src="Morp/MorpCode.png" style="margin-top: 9.5%; width: 40%; margin-right: 2%; float:right">
 
             <h1 style="margin-left: 2%; margin-top: 42% "><font color="#142450">Contre Qui Jouer ?</font></h1>
-            <p style="margin-left: 2%; margin-top: 31.5%;">Le Programme étant codé en POO, il a été simple <br>
-                d'installé une IA, codé avec un principe de Min-Max <br>
-                et avec un système de difficulté allant 1 a 9, <br>
-                les nombre de la difficulté correspond au nombre de <br>
-                coup possible, étant donné que il y a 9 case, <br>
-                la 9eme difficulté est en principe, imbattable. 
+            <p style="margin-left: 2%; margin-top: 31.5%;">Le Programme etant code en POO, il a ete simple <br>
+                d'installer une IA, coder avec un principe de <br>
+                Min-Max et avec un systeme de difficultes <br>
+                allant 1 a 9, les nombres de la difficulte <br>
+                correspondent au nombre de coups possible, <br>
+                etant donne qu'il y a 9 cases, la 9eme difficultes <br>
+                est en principe, imbattable. 
             </p>
             <img src="Morp/MorpEgal.png" style="float: right; margin-top: 15%; margin-right: 1%; width: 25%;">
             <img src="Morp/MorpIA.png" style="float: right; margin-top: 15%; margin-right: 1%; width: 25%;">
 
             <h1 style="float:left; margin-top: 66%; margin-left: 29%;"> <font color="#142450">Conclusion</font></h1>
-            <p style="margin-left: 2%; margin-right: 2%; margin-top: 14.5%;">Ce Programme a était fait en classe de Terminal et était le projet qui a été un des plus laborieux mais aussi un des plus intéressant et agréable a faire avec une sensation d'évolution. Il m'a beaucoup apporté sur le fonctionnement de la POO et sur comment faire et ce fus aussi la premier fois que j'ai touché aux IA et ça ma beaucoup passionné d'y touché et j'ai aussi touché a de l'interface graphique a l'aide de Pygame, un programme en apparence simple mais qui a permis de touché a un peu tout.</p>
+            <p style="margin-left: 2%; margin-right: 2%; margin-top: 14.5%;">Ce Programme a ete fait en classe de Terminal et etait le projet qui a ete un des plus laborieux mais aussi un des plus interessant et agreable a faire avec une sensation d'evolution. Il m'a beaucoup apporte sur le fonctionnement de la POO et sur comment faire. Se fus aussi la premier fois que j'ai touche aux IA et ça m'a beaucoup passionne d'y toucher et j'ai aussi touche a de l'interface graphique a l'aide de Pygame, un programme en apparence simple mais qui m'a permis de toucher a un peu tout.</p>
 
             <a href="Fate.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
                 <img src="suite/Gauche/Fate.png" id="Pixel" style="opacity: 1; margin-top: 80.5%; margin-left: -53.25%;"> 
