--- a/Moi.html
+++ b/Moi.html
@@ -56,12 +56,12 @@
                 </audio>
             </div>
             <div id="Crédit">
-                <a id="LienGit" href="https://github.com/KylaCrea5/Portfolio-Teddy-Fetu" target="_blank" onmouseover="HoverIcon('Git','GitSouri')" onmouseout="PasHover('Git','GitSouri')">
+                <a id="LienGit" href="https://github.com/KylaCrea5" target="_blank" onmouseover="HoverIcon('Git','GitSouri')" onmouseout="PasHover('Git','GitSouri')">
                 <img src="Alloo/Git1.png" id="Git" style="opacity: 1;">
                 <img src="Alloo/Git2.png" id="GitSouri" style="opacity: 0;">
             </a>
                 
-                <a id="LienInd" href="" target="_blank" onmouseover="HoverIcon('In','InSouri')" onmouseout="PasHover('In','InSouri')">
+                <a id="LienInd" href="https://www.linkedin.com/in/teddy-fetu-a839bb233/" target="_blank" onmouseover="HoverIcon('In','InSouri')" onmouseout="PasHover('In','InSouri')">
                 <img src="Alloo/In.png" id="In" style="opacity: 1;">
                 <img src="Alloo/In2.png" id="InSouri" style="opacity: 0;">
             </a>
