--- a/Moi.html
+++ b/Moi.html
@@ -79,6 +79,15 @@
             </div>
         </div>
         <script>
+            var Hornet = document.getElementById("Skilsong");
+            Hornet.volume = 0.15;
+            var King = document.getElementById("Pale");
+            King.volume = 0.20;
+            var Neige = document.getElementById("Snow");
+            Neige.volume = 0.15;
+            var Space = document.getElementById("Stardust");
+            Space.volume = 0.10;
+
             function HoverIcon(icon, iconplus) {
                 document.getElementById(icon).style.opacity = 0;
                 document.getElementById(iconplus).style.opacity=1;
