--- a/Moi.html
+++ b/Moi.html
@@ -29,12 +29,12 @@
 
             <div id="sousbout">
                 <a id="LienCV" href="Alloo/Curriculum Vitae.pdf" target="_blank" onmouseover="HoverIcon('CV','CVSouri')" onmouseout="PasHover('CV','CVSouri')">
-                    <img src="Alloo/Cv2.png" id="CV" style="opacity: 1;">
-                    <img src="Alloo/Cv1.png" id="CVSouri" style="opacity: 0;">                
+                    <img src="Alloo/Cv1.png" id="CV" style="opacity: 1;">
+                    <img src="Alloo/Cv2.png" id="CVSouri" style="opacity: 0;">                
                 </a>
                 <a id="LienConct" href="Contact.html" onmouseover="HoverIcon('Cont','ContSouri')" onmouseout="PasHover('Cont','ContSouri')">
-                    <img src="Alloo/Contact2.png" id="Cont" style="opacity: 1;" >
-                    <img src="Alloo/Contact.png" id="ContSouri" style="opacity: 0;">
+                    <img src="Alloo/Contact.png" id="Cont" style="opacity: 1;" >
+                    <img src="Alloo/Contact2.png" id="ContSouri" style="opacity: 0;">
                 </a>
             </div>
         </div>
