--- a/Proj/Jarre.html
+++ b/Proj/Jarre.html
@@ -5,7 +5,7 @@
         <title>Portfolio Kyla/ Jeu de Jarre</title>
         <link rel="icon" href="Rose de Kyla .png">
         <link rel="stylesheet" href="LosProjectos.css">
-        <link href="Font/Hardpixel.OTF">
+        <link href="../Font/Hardpixel.OTF">
     </head>
     
     <body style="background-color: #1f761f;">
