--- a/Proj/Bot.html
+++ b/Proj/Bot.html
@@ -10,10 +10,10 @@
     
     <body style="background-color: #710808;">
         <div id="warp">
-            <div id="Titre" style="height: 20%;">
+            <div id="Titre" style="height: 18%;">
                 <img id="TitreBot" src="Bot/BotT.png">
             </div>
-            <div id="Margin"></div>
+            <div id="Margin" style="height: 18.15%;"></div>
 
             <p style="margin-left: 22.5%; margin-top: 2%;">Programme code en Python avec l'API discord.py sur Pycharm</p>
 
@@ -23,10 +23,10 @@
                 en exemple ici, a chaque message contenant <br> le mot "ping" il repondra "pong"
                 il peut facilement etre un <br> bot de moderation 
                 </p>
-            <img src="Bot/BotPing.png" style="margin-top: 7%; width: 42%; float: right; ">
+            <img src="Bot/BotPing.png" style="margin-top: 9%; width: 40%; float: right; ">
 
-            <h1 style="margin-left: 2%; margin-top: 36% "><font color="#5e0808">A Votre Service !</font></h1>
-            <p style="margin-left: 2%; margin-top: 22%;">Il est possible de demander a un bot discord d'effectuer des <br> actions.
+            <h1 style="margin-left: 2%; margin-top: 43.25% "><font color="#5e0808">A Votre Service !</font></h1>
+            <p style="margin-left: 2%; margin-top: 33%;">Il est possible de demander a un bot discord d'effectuer des <br> actions.
                 Pour cela il faut ecrire le prefixe du bot (ici "Kyla.") <br>
                 et l'action demandee Il est donc possible de faire de nombreuses <br>
                 choses, comme demande les regles d'un serveur ou des instructions <br>
