--- a/Proj/Bot.html
+++ b/Proj/Bot.html
@@ -38,12 +38,12 @@
                 avec son nombre d'avertissement dans un dictionnaire et renvoyer <br>
                 au bout du 3eme. 
             </p>
-            <img src="Bot/BotMagie.png" style="float: right; margin-top: 5%; height: 12%;">
-            <img src="Bot/BotJugement.png" style="float: right; margin-top: 0%; width: 41%;">
-            <img src="Bot/BotBan.png" style="float: right; margin-left: 45%; margin-top: 2%; width: 42%;">
+            <img src="Bot/BotMagie.png" style="float: right; margin-top: 15%; height: 12%;">
+            <img src="Bot/BotJugement.png" style="float: right; margin-top: -4%; margin-left: 45%; width: 44%;">
+            <img src="Bot/BotBan.png" style="float: right; margin-left: 45%; margin-top: 2%; width: 45%;">
 
-            <h1 style="margin-left: 2%; margin-top: 87.5%;"><font color="#5e0808">Recevez ma Bénédiction</font></h1>
-            <p style="margin-left: 2%; margin-top: 28.5%;">Il est aussi possible de faire en sorte qu'un bot discord <br>
+            <h1 style="margin-left: 2%; margin-top: 93.5%;"><font color="#5e0808">Recevez ma Bénédiction</font></h1>
+            <p style="margin-left: 2%; margin-top: 24.5%;">Il est aussi possible de faire en sorte qu'un bot discord <br>
                 attribue des roles au utilisateur comme tout moderateur, <br>
                 pour optimiser cela, il est possible qu'un bot lise toutes <br>
                 les reactions mises sur un message en particulier et d'ajouter <br>
@@ -57,22 +57,22 @@
             <img src="Bot/BotGalaxi.png" style="float: right; margin-right: -14%; margin-top: 38%; height: 2.5%;">
             <img src="Bot/BotBeni.png" style="float: right; margin-top: 46%; margin-right: -40%; width: 35%;">
 
-            <h1 style="float:left; margin-top: 115%; margin-left: 29%;"> <font color="#5e0808">Conclusion</font></h1>
-            <p style="margin-left: 2%; margin-right: 2%; margin-top: 26%;">C'est un programme que j'ai cree a la fin des grandes vacances de 2021, c'est un programme que j'ai eu envie de faire pour un serveur personnalise. pour la realisation de ce programme, j'ai du apprendre a utiliser une API (discord.py) et suivre la documentation en ligne pas a pas, cela fut tres enrichissant et utile.</p>
+            <h1 style="float:left; margin-top: 119.25%; margin-left: 31%;"> <font color="#5e0808">Conclusion</font></h1>
+            <p style="margin-left: 2%; margin-right: 2%; margin-top: 22%;">C'est un programme que j'ai cree a la fin des grandes vacances de 2021, c'est un programme que j'ai eu envie de faire pour un serveur personnalise. pour la realisation de ce programme, j'ai du apprendre a utiliser une API (discord.py) et suivre la documentation en ligne pas a pas, cela fut tres enrichissant et utile.</p>
 
             <a href="Pixel.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
-                <img src="suite/Gauche/Art.png" id="Pixel" style="opacity: 1; margin-top: 131.5%; margin-left: -49%;"> 
-                <img src="suite/Gauche/Artsus.png" id="PixelSouri" style="opacity: 0; margin-top: 131%; margin-left: -49%;">
+                <img src="suite/Gauche/Art.png" id="Pixel" style="opacity: 1; margin-top: 133.5%; margin-left: -46%;"> 
+                <img src="suite/Gauche/Artsus.png" id="PixelSouri" style="opacity: 0; margin-top: 133%; margin-left: -46%;">
             </a>
 
             <a href="../Projet.html" onmouseover="HoverIcon('Proj','ProjSouri')" onmouseout="PasHover('Proj','ProjSouri')">
-                <img src="suite/Accueil.png" id="Proj" style="opacity: 1; margin-top: 131.5%; margin-left: -22%;"> 
-                <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 131%; margin-left: -22%;">
+                <img src="suite/Accueil.png" id="Proj" style="opacity: 1; margin-top: 133.5%; margin-left: -20%;"> 
+                <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 133%; margin-left: -20%;">
             </a>
 
             <a href="Jarre.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
-                <img src="suite/Droite/Jarre.png" id="Jar" style="opacity: 1; margin-top: 131.5%;">
-                <img src="suite/Droite/Jarresup.png" id="JarSouri" style="opacity: 0; margin-top: 131%;">
+                <img src="suite/Droite/Jarre.png" id="Jar" style="opacity: 1; margin-top: 133.5%;">
+                <img src="suite/Droite/Jarresup.png" id="JarSouri" style="opacity: 0; margin-top: 133%;">
             </a>
 
         </div>
