--- a/Proj/Fate.html
+++ b/Proj/Fate.html
@@ -9,14 +9,14 @@
     </head>
     
     <body style="background-color: #a274bf;">
-        <div id="warp" style="height: 212%;">
-            <div id="Titre" style="height: 18.5%;">
+        <div id="warp" style="height: 238%;">
+            <div id="Titre" style="height: 16%; margin-top: 1%;">
                 <img id="TitreBot" src="Fate/FateT.png">
             </div>
-            <div id="Margin" style="height: 18.65%;"></div>
+            <div id="Margin" style="height: 16.5%;"></div>
 
             <p style="margin-left: 23%; margin-top: 1%;">Programme code en Python avec une base de données sur Pycharm</p>
-            <h1 style="margin-left:2%; margin-top: 12.5%;"><font color="#7d5297">Fate, Source Du Destin</font></h1>
+            <h1 style="margin-left:2%; margin-top: 12.75%;"><font color="#7d5297">Fate, Source Du Destin</font></h1>
             <p style="margin-left: 2%; margin-top: 18%;">Fate est un Journal intime qui conserve toutes les <br>
                 donnees qui sont ecrites, en tant que journal intime <br>
                 il va de soit qu'il y a un systeme de securite comprenant <br>
@@ -37,7 +37,7 @@
             <img src="Fate/FateMDP.png" style="margin-top: 1%; width: 33%; float: right; margin-right: 1%; ">
             <img src="Fate/FateMois.png" style="margin-top: 1%; width: 33.5%; float: right; margin-right: 1%;">
 
-            <h1 style="margin-left: 2%; margin-top: 47.5% "><font color="#7d5297">Scellé Dans L'Encre !</font></h1>
+            <h1 style="margin-left: 2%; margin-top: 47.25% "><font color="#7d5297">Scelle Dans L'Encre !</font></h1>
             <p style="margin-left: 2%; margin-top: 19.5%;">Lors du Lancement de Fate, il demandera comment se  <br>
                 passe la journee du proprietaire entre 5 choix de reponses, <br>
                 a la suite de cet reponse, le comportement du programme changera, <br>
@@ -51,8 +51,8 @@
             <img src="Fate/FateAvant.png" style="float: right; margin-top: 15%; width: 35%; margin-right: 1%;">
             <img src="Fate/FateSentImentLanc.png" style="float: right; margin-top: 1%; width: 43%; margin-right: -35%;">
 
-            <h1 style="margin-left: 2%; margin-top: 83.5%;"><font color="#7d5297">Robotique Sentimental</font></h1>
-            <p style="margin-left: 2%; margin-top: 23%;">Une fois que vous avez ecrit tout ce que vous <br>
+            <h1 style="margin-left: 2%; margin-top: 85%;"><font color="#7d5297">Robotique Sentimental</font></h1>
+            <p style="margin-left: 2%; margin-top: 36%;">Une fois que vous avez ecrit tout ce que vous <br>
                 vouliez dire, <br>
                 il est possible de tout relire dans les archives, <br>
                 le programme stock tout. Il est donc même possible <br>
@@ -65,23 +65,23 @@
             <img src="Fate/FateLireAvant.png" style="float: right; margin-top: 15%; width: 21%; margin-right: 9%;" >
             <img src="Fate/FateCalendrier.png" style="float: right; margin-top: 1%; width: 41%; margin-right: 1%;">
 
-            <h1 style="float:left; margin-top: 116%; margin-left: 29%;"> <font color="#7d5297">Conclusion</font></h1>
+            <h1 style="float:left; margin-top: 116%; margin-left: 30%;"> <font color="#7d5297">Conclusion</font></h1>
             <p style="margin-left: 2%; margin-right: 2%; margin-top: 15.5%;">Le nom de "Fate" vient de la bague que porte un personnage important de mon univers (celui en font sur l'accueil du portfolio) et ce programme me tient a coeur et j'ai eprouve beaucoup de motivation a le faire.
                 Ce programme a ete un programme tres enrichissant a faire, c'est une idee de projet que j'ai eu en debut Decembre 2021 et c'est un projet que j'ai fait en complete autonomie, il m'a fait realiser pas mal de choses sur le fait de programmer en autonomie. j'ai aussi appris a comment gerer des donnees dans plusieurs fichiers, crypter et a faire un programme qui se repare ainsi qu'a le faire utiliser la notion de temps. </p>
 
             <a href="Lab.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
-                <img src="suite/Gauche/Lab.png" id="Pixel" style="opacity: 1; margin-top: 131.5%; margin-left: -51.5%;"> 
-                <img src="suite/Gauche/Labsus.png" id="PixelSouri" style="opacity: 0; margin-top: 131%; margin-left: -51.5%;">
+                <img src="suite/Gauche/Lab.png" id="Pixel" style="opacity: 1; margin-top: 133.5%; margin-left: -49%;"> 
+                <img src="suite/Gauche/Labsus.png" id="PixelSouri" style="opacity: 0; margin-top: 133%; margin-left: -49%;">
             </a>
 
             <a href="../Projet.html" onmouseover="HoverIcon('Proj','ProjSouri')" onmouseout="PasHover('Proj','ProjSouri')">
-                <img src="suite/Accueil.png" id="Proj" style="opacity: 1; margin-top: 131.5%; margin-left: -24.75%;"> 
-                <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 131%; margin-left: -24.75%;">
+                <img src="suite/Accueil.png" id="Proj" style="opacity: 1; margin-top: 133.5%; margin-left: -24%;"> 
+                <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 133%; margin-left: -24%;">
             </a>
 
             <a href="Morpion.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
-                <img src="suite/Droite/Morp.png" id="Jar" style="opacity: 1; margin-top: 131.5%; margin-left: -3%;">
-                <img src="suite/Droite/Morpsus.png" id="JarSouri" style="opacity: 0; margin-top: 131%; margin-left: -3%;">
+                <img src="suite/Droite/Morp.png" id="Jar" style="opacity: 1; margin-top: 133.5%; margin-left: -3%;">
+                <img src="suite/Droite/Morpsus.png" id="JarSouri" style="opacity: 0; margin-top: 133%; margin-left: -3%;">
             </a>
 
         </div>
