--- a/Proj/Morpion.html
+++ b/Proj/Morpion.html
@@ -51,8 +51,9 @@
                 <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 80%; margin-left: -24%;">
             </a>
 
-            <a href="">
-                <img src="suite/Droite/Game.png" id="Jar" style="opacity: 1; margin-top: 80.5%; margin-left: -3%;">
+            <a href="HeadinCloud.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
+                <img src="suite/Droite/Head.png" id="Jar" style="opacity: 1; margin-top: 80.5%; margin-left: -3%;">
+                <img src="suite/Droite/Headsus.png" id="JarSouri" style="opacity: 0; margin-top: 80%; margin-left: -3%;">
             </a>
 
         </div>
