--- a/Projet.html
+++ b/Projet.html
@@ -40,7 +40,11 @@
                     <img src="Alloo/Projet/Morpion.png"  id="Morp" style="opacity: 1;">
                     <img src="Alloo/Projet/Morpion2.png" id="MorpSouri" style="opacity: 0;">
                 </a>
-                    <img src="Alloo/Projet/Rien.png" id="Game">
+
+                <a  href="Proj/HeadinCloud.html" onmouseover="HoverIcon('Cloud','CloudSouri')" onmouseout="PasHover('Cloud','CloudSouri')">
+                    <img src="Alloo/Projet/Head.png"  id="Cloud" style="opacity: 1;">
+                    <img src="Alloo/Projet/Head2.png" id="CloudSouri" style="opacity: 0;">
+                </a>
                 
                 <a href="Proj/Pixel.html" onmouseover="HoverIcon('Pix','PixSouri')" onmouseout="PasHover('Pix','PixSouri')">
                     <img src="Alloo/Projet/Pixel.png" id="Pix" style="opacity: 1;">
