--- a/Proj/HeadinCloud.html
+++ b/Proj/HeadinCloud.html
@@ -11,7 +11,7 @@
     <body style="background-color: #86b6d7;">
         <div id="warp" style="height: 160%;">
             <div id="Titre" style="height: 24%;">
-                <img id="TitreBot" src="Morp/MorpT.png" style="margin-left: 15%; margin-top: -1%;">
+                <img id="TitreBot" src="HeadintheCloud/HeadT.png" style="margin-left: 15%; margin-top: -1%;">
             </div>
             <div id="Margin" style="height: 24.15%;"></div>
 
