--- a/Proj/HeadinCloud.html
+++ b/Proj/HeadinCloud.html
@@ -9,50 +9,71 @@
     </head>
     
     <body style="background-color: #86b6d7;">
-        <div id="warp" style="height: 160%;">
-            <div id="Titre" style="height: 24%;">
+        <div id="warp" style="height: 230%;">
+            <div id="Titre" style="height: 19.25%;">
                 <img id="TitreBot" src="HeadintheCloud/HeadT.png" style="margin-left: 15%; margin-top: -1%;">
             </div>
-            <div id="Margin" style="height: 24.15%;"></div>
+            <div id="Margin" style="height: 19.40%;"></div>
 
-            <p style="margin-left: 18.5%; margin-top: 2%;">Programme code en Python en Poo avec la Librairie Pygame sur Pycharm</p>
+            <p style="margin-left: 26.5%; margin-top: 2%;">Programme code en C# en POO sur Visual Studio 2019 Avec <br>  L'Editeur 3D Unity et des Asset importé de Asset Store</p>
 
-            <h1 style="margin-left:2%; margin-top: 13%;"><font color="#142450">Une Croix Et Un Cercle</font></h1>
-            <p style="margin-left: 2%; margin-top: 17.5%;">Ce Projet est un Morpion (Tic Tac Toe) est un <br>
-                projet fait en POO, ce qui a rendu le Programme <br>
-                personnalisable (symbole et grille), il a aussi <br>
-                une interface graphique en Pycharm, ce qui permet <br>
-                de jouer avec d'autres personnes. 
+            <h1 style="margin-left:2%; margin-top: 13%;"><font color="#5691b9">Une nouvelle Perce-Neige</font></h1>
+            <p style="margin-left: 2%; margin-top: 16.5%;">Ce projet Unity est le premier de ma creation, <br>
+                 ca a ete la premiere fois que j'ai touche aux outils <br>
+                 de creation du terrain. il etait demande de creer <br>
+                 un environnement simple et le premier paysage qui <br>
+                 m'est venue etait un paysage enneige et ça a ete <br>
+                 vraiment un plaisir de voir la progression.
             </p>
-            <img src="Morp/MorpCode.png" style="margin-top: 9.5%; width: 40%; margin-right: 2%; float:right">
+            <img src="HeadintheCloud/HeadZone.png" style="margin-top: 9.5%; width: 44%; margin-right: 2%; float:right">
 
-            <h1 style="margin-left: 2%; margin-top: 42% "><font color="#142450">Contre Qui Jouer ?</font></h1>
-            <p style="margin-left: 2%; margin-top: 31.5%;">Le Programme etant code en POO, il a ete simple <br>
-                d'installer une IA, coder avec un principe de <br>
-                Min-Max et avec un systeme de difficultes <br>
-                allant 1 a 9, les nombres de la difficulte <br>
-                correspondent au nombre de coups possible, <br>
-                etant donne qu'il y a 9 cases, la 9eme difficultes <br>
-                est en principe, imbattable. 
+            <h1 style="margin-left: 2%; margin-top: 42% "><font color="#5691b9">Une vie sous ses Flocon !</font></h1>
+            <p style="margin-left: 2%; margin-top: 28.5%;">Pour creer un environnement original, j'ai du allez <br>
+                chercher des assets gratuits moi-meme sur internet et <br>
+                les plusieurs stores. J'ai donc du m'adapter aux assets <br>
+                que je trouvais et aux textures a leur applique pour <br>
+                donner un effet de neige sur les toits des maisons <br>
+                ainsi que sur les arbres.
             </p>
-            <img src="Morp/MorpEgal.png" style="float: right; margin-top: 15%; margin-right: 1%; width: 25%;">
-            <img src="Morp/MorpIA.png" style="float: right; margin-top: 15%; margin-right: 1%; width: 25%;">
+            <img src="HeadintheCloud/HeadManoir.png" style="float: right; margin-top: 15%; margin-right: 1%; width: 25%;">
+            <img src="HeadintheCloud/HeadManoirNeige.png" style="float: right; margin-top: 15%; margin-right: 1%; width: 25%;">
+            <img src="HeadintheCloud/HeadArbre.png" style="float: right; margin-top: -3%; margin-right: 1%; width: 25%;">
 
-            <h1 style="float:left; margin-top: 66%; margin-left: 29%;"> <font color="#142450">Conclusion</font></h1>
-            <p style="margin-left: 2%; margin-right: 2%; margin-top: 14.5%;">Ce Programme a ete fait en classe de Terminal et etait le projet qui a ete un des plus laborieux mais aussi un des plus interessant et agreable a faire avec une sensation d'evolution. Il m'a beaucoup apporte sur le fonctionnement de la POO et sur comment faire. Se fus aussi la premier fois que j'ai touche aux IA et ça m'a beaucoup passionne d'y toucher et j'ai aussi touche a de l'interface graphique a l'aide de Pygame, un programme en apparence simple mais qui m'a permis de toucher a un peu tout.</p>
+            <h1 style="margin-left: 2%; margin-top: 78% "><font color="#5691b9">Les Corbeau croasse cet Histoire</font></h1>
+            <p style="margin-left: 2%; margin-top: 39%;"> Pour mon premier programme j'ai code un systeme de Boids <br>
+                separe en un Boids Manager et un code pour les Boid <br>
+                en eux-memes, ils ont pour objectif de virevolte autour <br>
+                d'un certain point de ce donnant des targets differentes <br>
+                (en haut du manoir ou au-dessus de la foret), <br>
+                une fois qu'ils ont termine de virevolter,<br> ils doivent
+                se rendre a la prochaine destination <br>
+                (ou au manoir ou a la foret) et ensuite s'y poser <br>
+                puis reprendre la boucle, cela est gere avec des variables <br>
+                bools qui vont definir chaque etape, l'etape a faire est <br> true les autres en false
+                et il se succede à la fin d'un timer. 
+            </p>
+
+            <img src="HeadintheCloud/HeadBoid.png" style="float: right; margin-top: 13%; margin-right: 1%; width: 24%;">
+            <img src="HeadintheCloud/HeadDest.png" style="float: right; margin-top: 13%; margin-right: 1%; width: 24%;">
+            <img src="HeadintheCloud/HeadSolForet.png" style="float: right; margin-top: 8%; margin-right: -23%; margin-left: 1%; width: 23%;">
+            <img src="HeadintheCloud/HeadSolManoir.png" style="float: right; margin-top: 1%; margin-right: 0%; width: 23%;">
+
+            <h1 style="float:left; margin-top: 110%; margin-left: 29%;"> <font color="#5691b9">Conclusion</font></h1>
+            <p style="margin-left: 2%; margin-right: 2%; margin-top: 16.5%;">Ce projet est le premier projet Unity demandé pour ma formation du CNAM ENJMIN, ça a été un projet réalisé sur 8 jours où je ne pouvais travailler que 4H par jour environ. ce projet est très susceptible de subir des ajouts et des changements, il est prévu de faire une vus FPS pour mieux voir les détails de la map et les boid, ainsi qu'un changement du ciel et des lumières. Le projet m'a appris énormément de choses sur l'utilisation d'un éditeur, j'étais rapidement familiarisé avec les éditeurs ayant touché à RPG MAKER, mais l'apprentissage d'Unity et les notions</p>
 
             <a href="Fate.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
-                <img src="suite/Gauche/Fate.png" id="Pixel" style="opacity: 1; margin-top: 80.5%; margin-left: -49%;"> 
-                <img src="suite/Gauche/Fatesus.png" id="PixelSouri" style="opacity: 0; margin-top: 80%; margin-left: -49%;">
+                <img src="suite/Gauche/Morp.png" id="Pixel" style="opacity: 1; margin-top: 125.5%; margin-left: -47%;"> 
+                <img src="suite/Gauche/Morpsus.png" id="PixelSouri" style="opacity: 0; margin-top: 125%; margin-left: -47%;">
             </a>
 
             <a href="../Projet.html" onmouseover="HoverIcon('Proj','ProjSouri')" onmouseout="PasHover('Proj','ProjSouri')">
-                <img src="suite/Accueil.png" id="Proj" style="opacity: 1; margin-top: 80.5%; margin-left: -24%;"> 
-                <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 80%; margin-left: -24%;">
+                <img src="suite/Accueil.png" id="Proj" style="opacity: 1; margin-top: 125.5%; margin-left: -22%;"> 
+                <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 125%; margin-left: -22%;">
             </a>
 
-            <a href="">
-                <img src="suite/Droite/Game.png" id="Jar" style="opacity: 1; margin-top: 80.5%; margin-left: -3%;">
+            <a href="" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
+                <img src="suite/Droite/Art.png" id="Jar" style="opacity: 1; margin-top: 125.5%; margin-left: 0%;">
+                <img src="suite/Droite/Artsus.png" id="JarSouri" style="opacity: 0; margin-top: 125%; margin-left: 0%;">
             </a>
 
         </div>
