--- a/Proj/Bot.html
+++ b/Proj/Bot.html
@@ -60,7 +60,7 @@
             <h1 style="float:left; margin-top: 119.25%; margin-left: 31%;"> <font color="#5e0808">Conclusion</font></h1>
             <p style="margin-left: 2%; margin-right: 2%; margin-top: 22%;">C'est un programme que j'ai cree a la fin des grandes vacances de 2021, c'est un programme que j'ai eu envie de faire pour un serveur personnalise. pour la realisation de ce programme, j'ai du apprendre a utiliser une API (discord.py) et suivre la documentation en ligne pas a pas, cela fut tres enrichissant et utile.</p>
 
-            <a href="Pixel.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
+            <a href="PixelArt.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
                 <img src="suite/Gauche/Art.png" id="Pixel" style="opacity: 1; margin-top: 133.5%; margin-left: -46%;"> 
                 <img src="suite/Gauche/Artsus.png" id="PixelSouri" style="opacity: 0; margin-top: 133%; margin-left: -46%;">
             </a>
