--- a/Proj/HeadinCloud.html
+++ b/Proj/HeadinCloud.html
@@ -71,7 +71,7 @@
                 <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 125%; margin-left: -22%;">
             </a>
 
-            <a href="" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
+            <a href="PixelArt.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
                 <img src="suite/Droite/Art.png" id="Jar" style="opacity: 1; margin-top: 125.5%; margin-left: 0%;">
                 <img src="suite/Droite/Artsus.png" id="JarSouri" style="opacity: 0; margin-top: 125%; margin-left: 0%;">
             </a>
