--- a/Proj/PixelArt.html
+++ b/Proj/PixelArt.html
@@ -69,9 +69,9 @@
             <p style="margin-left: 2%; margin-right: 2%; margin-top: 15.5%;">Le nom de "Fate" vient de la bague que porte un personnage important de mon univers (celui en font sur l'accueil du portfolio) et ce programme me tient a coeur et j'ai eprouve beaucoup de motivation a le faire.
                 Ce programme a ete un programme tres enrichissant a faire, c'est une idee de projet que j'ai eu en debut Decembre 2021 et c'est un projet que j'ai fait en complete autonomie, il m'a fait realiser pas mal de choses sur le fait de programmer en autonomie. j'ai aussi appris a comment gerer des donnees dans plusieurs fichiers, crypter et a faire un programme qui se repare ainsi qu'a le faire utiliser la notion de temps. </p>
 
-            <a href="Lab.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
-                <img src="suite/Gauche/Lab.png" id="Pixel" style="opacity: 1; margin-top: 133.5%; margin-left: -49%;"> 
-                <img src="suite/Gauche/Labsus.png" id="PixelSouri" style="opacity: 0; margin-top: 133%; margin-left: -49%;">
+            <a href="HeadinCloud.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
+                <img src="suite/Gauche/Head.png" id="Pixel" style="opacity: 1; margin-top: 133.5%; margin-left: -49%;"> 
+                <img src="suite/Gauche/Headsus.png" id="PixelSouri" style="opacity: 0; margin-top: 133%; margin-left: -49%;">
             </a>
 
             <a href="../Projet.html" onmouseover="HoverIcon('Proj','ProjSouri')" onmouseout="PasHover('Proj','ProjSouri')">
@@ -79,9 +79,9 @@
                 <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 133%; margin-left: -24%;">
             </a>
 
-            <a href="Morpion.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
-                <img src="suite/Droite/Morp.png" id="Jar" style="opacity: 1; margin-top: 133.5%; margin-left: -3%;">
-                <img src="suite/Droite/Morpsus.png" id="JarSouri" style="opacity: 0; margin-top: 133%; margin-left: -3%;">
+            <a href="Bot.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
+                <img src="suite/Droite/Botapr.png" id="Jar" style="opacity: 1; margin-top: 133.5%; margin-left: -3%;">
+                <img src="suite/Droite/Botsus.png" id="JarSouri" style="opacity: 0; margin-top: 133%; margin-left: -3%;">
             </a>
 
         </div>
