--- a/Projet.html
+++ b/Projet.html
@@ -46,7 +46,7 @@
                     <img src="Alloo/Projet/Head2.png" id="CloudSouri" style="opacity: 0;">
                 </a>
                 
-                <a href="Proj/Pixel.html" onmouseover="HoverIcon('Pix','PixSouri')" onmouseout="PasHover('Pix','PixSouri')">
+                <a href="Proj/PixelArt.html" onmouseover="HoverIcon('Pix','PixSouri')" onmouseout="PasHover('Pix','PixSouri')">
                     <img src="Alloo/Projet/Pixel.png" id="Pix" style="opacity: 1;">
                     <img src="Alloo/Projet/Pixe2l.png" id="PixSouri" style="opacity: 0;">
                 </a>
