--- a/Proj/PixelArt.html
+++ b/Proj/PixelArt.html
@@ -31,7 +31,14 @@
             <img src="PixelArt/Creation/Moveset/Max Sprite complet.png" style="float: left; margin-left: 11.5%; margin-top: 25.5%; height: 6.5%;">
             <img src="PixelArt/Creation/Moveset/Corbac sprite.png" style="float: left;margin-top : 26.5%; margin-left: 12.5%; height: 6%;">
 
-            <h1 style="margin-left: 28%; margin-top: 64%;"><font color="#7d5297"> <u>Annimation</u> :</font></h1>
+            <h1 style="margin-left: 28%; margin-top: 67%;"><font color="#7d5297"> <u>Annimation</u> :</font></h1>
+
+            <img src="PixelArt/Creation/Animation/Max_qui_court_loin.gif" style="float: left; margin-left: -65%; margin-top: 68%; height: 2.2%;">
+            <img src="PixelArt/Creation/Animation/Max_qui_courtv.gif" style="float: left; margin-left: -70%; margin-top: 68%; height: 2.2%;">
+            <img src="PixelArt/Creation/Animation/Max_qui_court_de_cotéd.gif" style="float: left; margin-left: -70%; margin-top: 74%; height: 2.2%;" >
+            <img src="PixelArt/Creation/Animation/Max_qui_court_de_cotég.gif"  style="float: left; margin-left: -65%; margin-top: 74%; height: 2.2%;" >
+            <img src="PixelArt/Creation/Animation/AileNoir.gif" style="float: left; margin-left: -58%; margin-top: 74%; height: 2.2%;" >
+            <img src="PixelArt/Creation/Animation/Max_qui_court_de_cotég.gif"  style="float: left; margin-left: -65%; margin-top: 74%; height: 2.2%;" >
 
 
 
