--- a/Proj/PixelArt.html
+++ b/Proj/PixelArt.html
@@ -38,8 +38,9 @@
             <img src="PixelArt/Creation/Animation/Max_qui_court_de_cotéd.gif" style="float: left; margin-left: -70%; margin-top: 74%; height: 2.2%;" >
             <img src="PixelArt/Creation/Animation/Max_qui_court_de_cotég.gif"  style="float: left; margin-left: -65%; margin-top: 74%; height: 2.2%;" >
             <img src="PixelArt/Creation/Animation/AileNoir.gif" style="float: left; margin-left: -58%; margin-top: 74%; height: 2.2%;" >
-            <img src="PixelArt/Creation/Animation/Max_qui_court_de_cotég.gif"  style="float: left; margin-left: -65%; margin-top: 74%; height: 2.2%;" >
-
+            <img src="PixelArt/Creation/Animation/Arbre_EnneigeKyla.gif"  style="float: left; margin-left: -53%; margin-top: 65%; height: 7.2%;">
+            <img src="PixelArt/Creation/Animation/Cour coté.gif" style="float: left; margin-left: -37%; margin-top: 68%; height: 4.3%;">
+            <img src="PixelArt/Creation/Animation/bg.gif" style="float: left; margin-left: -15%; margin-top: 68%; height: 5.7%;">
 
 
 
