--- a/Proj/PixelArt.html
+++ b/Proj/PixelArt.html
@@ -44,11 +44,16 @@
 
 
 
+            <h1 style="margin-left: 28%; margin-top: 95%;"><font color="#7d5297"> <u>Quelques Objets</u> :</font></h1>
 
-            <h1 style="margin-left: 2%; margin-top: 85%;"><font color="#7d5297">Robotique Sentimental</font></h1>
+            <img src="PixelArt/Creation/Decors/Box.png" style="float: left; margin-left: -90%; margin-top: 112%; height: 6%;">
+            <img src="PixelArt/Creation/Decors/Arbreaveccanne.png" style="float: left; margin-left: -46%; margin-top: 112%; height: 6.2%;">
+            <img src="PixelArt/Creation/Decors/Spears.png" style="float: left; margin-left: -25%; margin-top: 120%; height: 2.5%;">
 
 
-            <h1 style="float:left; margin-top: 116%; margin-left: 30%;"> <font color="#7d5297">Conclusion</font></h1>
+
+
+
 
             <a href="HeadinCloud.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
                 <img src="suite/Gauche/Head.png" id="Pixel" style="opacity: 1; margin-top: 133.5%; margin-left: -49%;"> 
